<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <!-- This POM declares two Maven repository servers, with IDs MC.repo 
      (the release repository) and MC-SNAPSHOT.repo (the SNAPSHOT repository). 
      Therefore, if you use this POM to deploy artifacts, your settings.xml configuration
      file should contain credentials (in a servers/server element) for those servers. -->
   <!-- This POM provides plugin management for dockerfile-maven-plugin. 
      Using that plugin will require credentials (in a servers/server element) 
      for any Docker registries you use, with an id equal to the DNS name of the 
      registry server. If you use the (default) Docker Hub registry, you will need 
      credentials for the server index.docker.io. -->
   <groupId>uk.badamson.mc</groupId>
   <artifactId>MC</artifactId>
   <version>2.30.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <organization>
      <name>Benedict Adamson</name>
   </organization>
   <licenses>
      <license>
         <name>GNU Affero General Public License, Version 3</name>
         <url>https://www.gnu.org/licenses/agpl.html</url>
         <distribution>repo</distribution>
      </license>
   </licenses>
   <scm>
      <connection>scm:git:git@github.com:BenedictAdamson/MC.git</connection>
      <developerConnection>scm:git:git@github.com:BenedictAdamson/MC.git</developerConnection>
      <url>https://github.com/BenedictAdamson/MC</url>
   </scm>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <!-- Debian package version IDs may not have a -SNAPSHOT suffix. -->
      <debian-package.version>2.30.0</debian-package.version>
      <MC.node.version>v16.15.0</MC.node.version>
      <MC.npm.version>8.5.5</MC.npm.version>
      <MC.spring-boot.version>2.7.2</MC.spring-boot.version>
      <helm.init.add-default-repo>false</helm.init.add-default-repo>
   </properties>
   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>io.kokuwa.maven</groupId>
               <artifactId>helm-maven-plugin</artifactId>
               <version>6.3.0</version>
               <extensions>true</extensions> <!-- Allow POM to have helm packaging -->
            </plugin>
            <plugin>
               <groupId>com.github.eirslett</groupId>
               <artifactId>frontend-maven-plugin</artifactId>
               <version>1.12.1</version>
               <configuration>
                  <nodeVersion>${MC.node.version}</nodeVersion>
                  <npmVersion>${MC.npm.version}</npmVersion>
                  <workingDirectory>src/main/web/</workingDirectory>
               </configuration>
            </plugin>
            <plugin>
               <groupId>com.github.spotbugs</groupId>
               <artifactId>spotbugs-maven-plugin</artifactId>
               <version>4.7.1.0</version>
            </plugin>
            <plugin>
               <groupId>com.spotify</groupId>
               <artifactId>dockerfile-maven-plugin</artifactId>
               <version>1.4.13</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-assembly-plugin</artifactId>
               <version>3.4.2</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.10.1</version>
               <configuration>
                  <release>17</release>
                  <testIncludes>
                     <include>**/*.java</include>
                  </testIncludes>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-failsafe-plugin</artifactId>
               <version>3.0.0-M7</version>
               <!-- For running integration tests. -->
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
               <version>3.4.0</version>
               <configuration>
                  <doclint>all,-missing</doclint>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jxr-plugin</artifactId>
               <version>3.2.0</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-pmd-plugin</artifactId>
               <version>3.17.0</version>
               <configuration>
                  <targetJdk>17</targetJdk>
                  <failurePriority>2</failurePriority>
                  <excludeRoots>
                     <excludeRoot>target/</excludeRoot>
                  </excludeRoots>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
               <version>3.2.0</version>
               <configuration>
                  <propertiesEncoding>ISO-8859-1</propertiesEncoding>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-source-plugin</artifactId>
               <version>3.2.1</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>3.0.0-M7</version>
               <configuration>
                  <!-- Ensure uses static inner test classes. -->
                  <excludes>
                     <exclude />
                  </excludes>
               </configuration>
               <!-- For running unit tests. -->
            </plugin>
            <plugin>
               <groupId>org.codehaus.gmavenplus</groupId>
               <artifactId>gmavenplus-plugin</artifactId>
               <version>1.13.1</version>
            </plugin>
            <plugin>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-maven-plugin</artifactId>
               <version>${MC.spring-boot.version}</version>
            </plugin>
            <plugin>
               <groupId>org.vafer</groupId>
               <artifactId>jdeb</artifactId>
               <version>1.10</version>
            </plugin>
         </plugins>
      </pluginManagement>
   </build>
   <distributionManagement>
      <repository>
         <id>MC.repo</id>
         <name>MC Repository</name>
         <url>http://localhost:8081/repository/maven-releases/</url>
      </repository>
      <snapshotRepository>
         <id>MC-SNAPSHOT.repo</id>
         <name>MC Repository</name>
         <url>http://localhost:8081/repository/maven-snapshots/</url>
      </snapshotRepository>
   </distributionManagement>
   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version>
         </dependency>
         <dependency>
            <groupId>de.flapdoodle.embed</groupId>
            <artifactId>de.flapdoodle.embed.mongo</artifactId>
            <version>3.4.8</version>
            <type>bundle</type>
            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>de.flapdoodle.embed</groupId>
            <artifactId>de.flapdoodle.embed.mongo.spring</artifactId>
            <version>1.1.0-spring27x</version>
            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>javax.persistence-api</artifactId>
            <version>2.2</version>
            <scope>provided</scope>
         </dependency>
         <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>4.7.1</version>
         </dependency>
         <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>3.0.12</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
         <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>org.junit</groupId>
            <artifactId>junit-bom</artifactId>
            <version>5.8.2</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
         <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-client-java</artifactId>
            <version>5.13.2</version>
            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>org.opentest4j</groupId>
            <artifactId>opentest4j</artifactId>
            <version>1.2.0</version>
            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>org.spockframework</groupId>
            <artifactId>spock-bom</artifactId>
            <version>2.1-groovy-3.0</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
         <dependency>
            <!-- Import dependency management from Spring Boot -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-dependencies</artifactId>
            <version>${MC.spring-boot.version}</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
         <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-bom</artifactId>
            <version>1.17.3</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
         <dependency>
            <groupId>uk.badamson</groupId>
            <artifactId>DBC-assertions</artifactId>
            <version>3.0.1</version>
            <scope>test</scope>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <modules>
      <module>MC-back-end</module>
      <module>MC-core</module>
      <module>MC-database</module>
      <module>MC-front-end</module>
      <module>MC-integration</module>
      <module>MC-model</module>
      <module>MC-REST</module>
   </modules>
</project>
